cmake: add possibility to override nranks for testing

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,9 +1,13 @@
 
 if (USE_MPI)
-  include(ProcessorCount)
-  ProcessorCount(nproc)
-  math(EXPR num_ranks "(${nproc}+1)/2")  # get half the number of procs (rounded up)
-  set(num_threads 2)
+  if (TEST_MPI_RANKS STREQUAL "auto")
+    include(ProcessorCount)
+    ProcessorCount(nproc)
+    math(EXPR num_ranks "(${nproc}+1)/2")  # get half the number of procs (rounded up)
+  else ()
+    set(num_ranks ${TEST_MPI_RANKS})
+  endif ()
+  set(num_threads 1)
   message("Tests will run with ${num_ranks} MPI ranks and ${num_threads} threads each")
 endif ()
 
@@ -20,7 +24,7 @@ set(DBCSR_PERF_TESTS
 foreach (dbcsr_perf_test ${DBCSR_PERF_TESTS})
   if (USE_MPI)
     add_test(NAME dbcsr_perf:${dbcsr_perf_test} COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${num_ranks} ${MPIEXEC_PREFLAGS} dbcsr_perf ${MPIEXEC_POSTFLAGS} "${CMAKE_CURRENT_SOURCE_DIR}/${dbcsr_perf_test}")
-    set_tests_properties(dbcsr_perf:${dbcsr_perf_test} PROPERTIES ENVIRONMENT OMP_NUM_THREADS=2)
+    set_tests_properties(dbcsr_perf:${dbcsr_perf_test} PROPERTIES ENVIRONMENT OMP_NUM_THREADS=${num_threads})
   else ()
     add_test(NAME dbcsr_perf:${dbcsr_perf_test} COMMAND dbcsr_perf "${CMAKE_CURRENT_SOURCE_DIR}/${dbcsr_perf_test}")
   endif ()
@@ -50,7 +54,7 @@ foreach (dbcsr_test ${DBCSR_TESTS})
   # register unittest executable with CMake
   if (USE_MPI)
     add_test(NAME ${dbcsr_test} COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${num_ranks} ${MPIEXEC_PREFLAGS} ${dbcsr_test} ${MPIEXEC_POSTFLAGS})
-    set_tests_properties(${dbcsr_test} PROPERTIES ENVIRONMENT OMP_NUM_THREADS=2)
+    set_tests_properties(${dbcsr_test} PROPERTIES ENVIRONMENT OMP_NUM_THREADS=${num_threads})
   else ()
     add_test(NAME ${dbcsr_test} COMMAND ${dbcsr_test})
   endif ()
