--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ addons:
       - ubuntu-toolchain-r-test
     packages:
       - gfortran
-      - libopenblas-dev
+      - libblas-dev
       - liblapack-dev
       - libopenmpi-dev
       - mpi-default-bin
