travis: move codecov upload into MPI+OpenMP make stage
cmake seems to have a problem of correctly deducing the module
dependencies with pre-processor directives interrupting the `use`
statements, see

  https://gitlab.kitware.com/cmake/cmake/issues/18188

Without those line-number statements, the coverage report is unable to
match the proper lines, giving false measures.
So, revert to using the make-generated build for generating coverage
reports and wait for a cmake+ninja-based build.

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,10 +32,11 @@ before_script:
 jobs:
   include:
     - stage: build
-      name: "Build and test MPI+OpenMP with make"
+      name: "Build and test MPI+OpenMP version with make"
       script:
         - make -j FC="mpif90" LD="mpif90" DFLAGS="-D__MPI_VERSION=2 -D__parallel -D__STATM_TOTAL" LIBS="-llapack -lblas" all
         - make test
+        - bash <(curl -s https://codecov.io/bash)
     - # run this in parallel with the other builds
       name: "Build and test MPI+OpenMP version with cmake"
       script:
@@ -55,6 +56,3 @@ jobs:
         - cmake -DCMAKE_BUILD_TYPE=Coverage -DUSE_MPI=OFF -DWITH_EXAMPLES=OFF ..
         - make -j
         - make CTEST_OUTPUT_ON_FAILURE=1 test
-
-after_success:
-  - bash <(curl -s https://codecov.io/bash)
