1) Introducing USE_OPENMP (ON bu default) 2) Examples require MPI 3) C API doesn't require MPI anymore

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,8 +13,9 @@ project(dbcsr)
 include(CMakeDependentOption)
 
 option(USE_MPI "Build with MPI support" ON)
-option(WITH_EXAMPLES "Build the examples" ON)
-cmake_dependent_option(WITH_C_API "Build the C API library" ON "USE_MPI" OFF) # the C API is only available when building with MPI
+option(USE_OPENMP "Build with OpenMP support" ON)
+option(WITH_C_API "Build the C API library" ON)
+cmake_dependent_option(WITH_EXAMPLES "Build the examples" ON "USE_MPI" OFF) # the C API is only available when building with MPI
 set(TEST_MPI_RANKS "auto" CACHE STRING "Number of MPI ranks for testing")
 
 if (WITH_C_API AND WITH_EXAMPLES)
@@ -47,11 +48,15 @@ endif ()
 get_filename_component(Fortran_COMPILER_NAME ${CMAKE_Fortran_COMPILER} NAME)
 
 if (Fortran_COMPILER_NAME MATCHES "gfortran.*")
-  set(CMAKE_CXX_FLAGS              "-fopenmp")
+  set(CMAKE_CXX_FLAGS              "")
   set(CMAKE_CXX_FLAGS_RELEASE      "-O3 -funroll-loops")
   set(CMAKE_CXX_FLAGS_COVERAGE     "-O0 -fprofile-arcs -ftest-coverage")
   set(CMAKE_CXX_FLAGS_DEBUG        "-O0 -ggdb")
-  set(CMAKE_Fortran_FLAGS          "-ffree-form -ffree-line-length-none -std=f2003 -fopenmp")
+  set(CMAKE_Fortran_FLAGS          "-ffree-form -ffree-line-length-none -std=f2003")
+if (USE_OPENMP)
+  set(CMAKE_CXX_FLAGS              "${CMAKE_CXX_FLAGS} -fopenmp")
+  set(CMAKE_Fortran_FLAGS          "${CMAKE_Fortran_FLAGS} -fopenmp")
+endif ()
   set(CMAKE_Fortran_FLAGS_RELEASE  "-O3 -funroll-loops")
   set(CMAKE_Fortran_FLAGS_DEBUG    "-O0 -ggdb")
   set(CMAKE_Fortran_FLAGS_COVERAGE "-O0 -fprofile-arcs -ftest-coverage")
