cmake: update docs, properly indent

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ include(CMakeDependentOption)
 option(USE_MPI "Build with MPI support" ON)
 option(USE_OPENMP "Build with OpenMP support" ON)
 option(WITH_C_API "Build the C API library" ON)
-cmake_dependent_option(WITH_EXAMPLES "Build the examples" ON "USE_MPI" OFF) # the C API is only available when building with MPI
+cmake_dependent_option(WITH_EXAMPLES "Build the examples" ON "USE_MPI" OFF) # all examples require MPI
 set(TEST_MPI_RANKS "auto" CACHE STRING "Number of MPI ranks for testing")
 
 if (WITH_C_API AND WITH_EXAMPLES)
@@ -48,10 +48,10 @@ if (Fortran_COMPILER_NAME MATCHES "gfortran.*")
   set(CMAKE_CXX_FLAGS_COVERAGE     "-O0 -fprofile-arcs -ftest-coverage")
   set(CMAKE_CXX_FLAGS_DEBUG        "-O0 -ggdb")
   set(CMAKE_Fortran_FLAGS          "-ffree-form -ffree-line-length-none -std=f2003")
-if (USE_OPENMP)
-  set(CMAKE_CXX_FLAGS              "${CMAKE_CXX_FLAGS} -fopenmp")
-  set(CMAKE_Fortran_FLAGS          "${CMAKE_Fortran_FLAGS} -fopenmp")
-endif ()
+  if (USE_OPENMP)
+    set(CMAKE_CXX_FLAGS              "${CMAKE_CXX_FLAGS} -fopenmp")
+    set(CMAKE_Fortran_FLAGS          "${CMAKE_Fortran_FLAGS} -fopenmp")
+  endif ()
   set(CMAKE_Fortran_FLAGS_RELEASE  "-O3 -funroll-loops")
   set(CMAKE_Fortran_FLAGS_DEBUG    "-O0 -ggdb")
   set(CMAKE_Fortran_FLAGS_COVERAGE "-O0 -fprofile-arcs -ftest-coverage")
