cmake: add OpenMP flags for Intel compiler

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,6 +60,10 @@ elseif (Fortran_COMPILER_NAME MATCHES "ifort.*")
   set(CMAKE_CXX_FLAGS_RELEASE      "-O3")
   set(CMAKE_CXX_FLAGS_DEBUG        "-O0 -debug")
   set(CMAKE_Fortran_FLAGS          "-free -stand f03 -fpp")
+  if (USE_OPENMP)
+    set(CMAKE_CXX_FLAGS              "${CMAKE_CXX_FLAGS} -openmp")
+    set(CMAKE_Fortran_FLAGS          "${CMAKE_Fortran_FLAGS} -openmp")
+  endif ()
   # Disable the line-length-extension warning #5268
   set(CMAKE_Fortran_FLAGS_RELEASE  "-O3 -diag-disable=5268")
   set(CMAKE_Fortran_FLAGS_DEBUG    "-O0 -debug")
