--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@ install/
 examples/*.x
 *.callgraph
 
+# exclude personal makefile
+Makefile.inc.*
+
 # The following covers some more,
 # Created by https://www.gitignore.io/api/vim,emacs,python,fortran
 
