Avoid parallel compilation conflict of unittests

--- a/tests/Makefile.inc
+++ b/tests/Makefile.inc
@@ -10,11 +10,10 @@ dbcsr_performance_driver: BIN_DEPS = dbcsr_performance_multiply.o
 SRC_TESTS += dbcsr_test_csr_conversions.F
 dbcsr_test_csr_conversions: BIN_DEPS =
 
-SRC_TESTS += dbcsr_unittest1.F
+SRC_TESTS += dbcsr_unittest1.F dbcsr_unittest2.F
 dbcsr_unittest1: BIN_DEPS = dbcsr_test_add.o dbcsr_test_multiply.o
-
-SRC_TESTS += dbcsr_unittest2.F
 dbcsr_unittest2: BIN_DEPS = dbcsr_test_multiply.o
+.NOTPARALLEL: dbcsr_unittest1 dbcsr_unittest2 # Dependency because both tests share an object file 
 
 SRC_TESTS += dbcsr_tensor_unittest.F
 dbcsr_tensor_unittest: BIN_DEPS = 
