cmake: fix build on macOS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,6 +76,10 @@ else ()
   set(CMAKE_Fortran_FLAGS_DEBUG    "-O0 -g")
 endif ()
 
+if (APPLE)
+  # fix /proc/self/statm can not be opened on macOS
+  add_definitions(-D__NO_STATM_ACCESS)
+endif()
 
 add_subdirectory(src)
 add_subdirectory(tests)
