--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,16 @@
 # ignore project specific locations & files
-lib/
-obj/
-bin/
-doc/
-src/acc/libsmm_acc/libcusmm/parameters.h
-src/acc/libsmm_acc/libcusmm/cusmm_kernels.h
-src/acc/libsmm_acc/libcusmm/libcusmm_parameters_utils.so
-install/
-examples/*.x
+/lib/
+/obj/
+/bin/
+/doc/
+/src/acc/libsmm_acc/libcusmm/parameters.h
+/src/acc/libsmm_acc/libcusmm/cusmm_kernels.h
+/src/acc/libsmm_acc/libcusmm/libcusmm_parameters_utils.so
+/install/
 *.callgraph
 
 # exclude personal makefile
-Makefile.inc.*
+/Makefile.inc.*
 
 # The following covers some more,
 # Created by https://www.gitignore.io/api/vim,emacs,python,fortran
