cmake: install .mod and .cmake export files
fixes: #48

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -140,10 +140,19 @@ endif ()
 install(TARGETS dbcsr EXPORT dbcsr
   LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
   ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}")
+install(FILES "${CMAKE_CURRENT_BINARY_DIR}/dbcsr_api.mod"
+  DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
+install(EXPORT dbcsr
+  DESTINATION "${CMAKE_INSTALL_LIBDIR}/dbcsr"
+  FILE DBCSRTargets.cmake)
+
 if (WITH_C_API)
   install(TARGETS dbcsr_c EXPORT dbcsr_c
     LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
     ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}")
   install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/dbcsr.h"
     DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
+  install(EXPORT dbcsr_c
+    DESTINATION "${CMAKE_INSTALL_LIBDIR}/dbcsr"
+    FILE DBCSRCTargets.cmake)
 endif()
